--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 environment:
   matrix:
   - nodejs_version: "8"
-install
+install:
   - ps: Install-Product node $env:nodejs_version
   - npm install
 test_script:
